// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table allows adding and deleting columns across the table header, body and footer 1`] = `
"<!-- wp:table -->
<figure class=\\"wp-block-table\\"><table class=\\"\\"><thead><tr><th></th><th></th></tr></thead><tbody><tr><td></td><td></td></tr><tr><td></td><td></td></tr></tbody><tfoot><tr><td></td><td></td></tr></tfoot></table></figure>
<!-- /wp:table -->"
`;

exports[`Table allows adding and deleting columns across the table header, body and footer 2`] = `
"<!-- wp:table -->
<figure class=\\"wp-block-table\\"><table class=\\"\\"><thead><tr><th></th></tr></thead><tbody><tr><td></td></tr><tr><td></td></tr></tbody><tfoot><tr><td></td></tr></tfoot></table></figure>
<!-- /wp:table -->"
`;

exports[`Table allows header and footer rows to be switched on and off 1`] = `
"<!-- wp:table -->
<figure class=\\"wp-block-table\\"><table class=\\"\\"><thead><tr><th>header</th><th></th></tr></thead><tbody><tr><td>body</td><td></td></tr><tr><td></td><td></td></tr></tbody><tfoot><tr><td>footer</td><td></td></tr></tfoot></table></figure>
<!-- /wp:table -->"
`;

exports[`Table allows header and footer rows to be switched on and off 2`] = `
"<!-- wp:table -->
<figure class=\\"wp-block-table\\"><table class=\\"\\"><tbody><tr><td>body</td><td></td></tr><tr><td></td><td></td></tr></tbody></table></figure>
<!-- /wp:table -->"
`;

exports[`Table allows text to by typed into cells 1`] = `
"<!-- wp:table -->
<figure class=\\"wp-block-table\\"><table class=\\"\\"><tbody><tr><td>This</td><td>is</td></tr><tr><td>table</td><td>block</td></tr></tbody></table></figure>
<!-- /wp:table -->"
`;

exports[`Table displays a form for choosing the row and column count of the table 1`] = `
"<!-- wp:table -->
<figure class=\\"wp-block-table\\"><table class=\\"\\"><tbody><tr><td></td><td></td><td></td><td></td><td></td></tr><tr><td></td><td></td><td></td><td></td><td></td></tr><tr><td></td><td></td><td></td><td></td><td></td></tr><tr><td></td><td></td><td></td><td></td><td></td></tr><tr><td></td><td></td><td></td><td></td><td></td></tr><tr><td></td><td></td><td></td><td></td><td></td></tr><tr><td></td><td></td><td></td><td></td><td></td></tr><tr><td></td><td></td><td></td><td></td><td></td></tr><tr><td></td><td></td><td></td><td></td><td></td></tr><tr><td></td><td></td><td></td><td></td><td></td></tr></tbody></table></figure>
<!-- /wp:table -->"
`;
